Correctly use multiple ClusteredGamesImpl 's